[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/BattleScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tick.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MagicMan.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Beholder.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://default_theme.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/CharPortrait.tscn" type="PackedScene" id=7]
[ext_resource path="res://button9slice.tres" type="StyleBox" id=8]
[ext_resource path="res://Scenes/TextBox.gd" type="Script" id=9]
[ext_resource path="res://Images/fade.png" type="Texture" id=10]
[ext_resource path="res://battle_theme.wav.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "begin_battle"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FADE:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="BattleScreen" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 80.4012 ],
"_edit_vertical_guides_": [ 156.224, 4.68182 ]
}
enemies = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), null, null ]

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.451874
margin_top = -0.225937
margin_right = -0.451874
margin_bottom = -0.225937
color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.237823
margin_top = 0.237827
margin_right = 0.237823
margin_bottom = 0.237823
theme = ExtResource( 6 )

[node name="StatusPanel" type="Panel" parent="UI"]
margin_left = 10.0
margin_top = 38.0
margin_right = 54.0
margin_bottom = 55.0

[node name="StatusContainer" type="HBoxContainer" parent="UI/StatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -3.0
custom_constants/separation = 0

[node name="PlayerStatPanel" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 36.0

[node name="PlayerStatContainer" type="VBoxContainer" parent="UI/PlayerStatPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 30.0

[node name="HPLabel" type="Label" parent="UI/PlayerStatPanel/PlayerStatContainer"]
margin_right = 40.0
margin_bottom = 12.0
text = "30/30HP"

[node name="APLabel" type="Label" parent="UI/PlayerStatPanel/PlayerStatContainer"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 28.0
text = "10/10MP"

[node name="EnemyStatPanel" type="PanelContainer" parent="UI"]
margin_left = 109.0
margin_top = 4.0
margin_right = 151.0
margin_bottom = 36.0

[node name="EnemyStatContainer" type="VBoxContainer" parent="UI/EnemyStatPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 30.0

[node name="HPLabel" type="Label" parent="UI/EnemyStatPanel/EnemyStatContainer"]
margin_right = 38.0
margin_bottom = 12.0
text = "10/10HP"
align = 1

[node name="Mood" type="Label" parent="UI/EnemyStatPanel/EnemyStatContainer"]
margin_top = 16.0
margin_right = 38.0
margin_bottom = 28.0

[node name="ActionPanel" type="Panel" parent="UI"]
margin_left = 7.0
margin_top = 75.2859
margin_right = 154.0
margin_bottom = 115.286

[node name="BackButton" type="Button" parent="UI/ActionPanel"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.0
margin_right = -1.0
margin_bottom = 8.0
text = "Back"
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="UI/ActionPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_right = -6.0
margin_bottom = -1.00011
mouse_filter = 2

[node name="ButtonContainer" type="GridContainer" parent="UI/ActionPanel/CenterContainer"]
margin_left = 49.0
margin_top = 19.0
margin_right = 49.0
margin_bottom = 19.0
columns = 2

[node name="ItemContainer" type="GridContainer" parent="UI/ActionPanel/CenterContainer"]
visible = false
margin_left = 49.0
margin_top = 19.0
margin_right = 49.0
margin_bottom = 19.0
columns = 2

[node name="ActionContainer" type="GridContainer" parent="UI/ActionPanel/CenterContainer"]
visible = false
margin_left = 49.0
margin_top = 19.0
margin_right = 49.0
margin_bottom = 19.0
columns = 2

[node name="SpecialContainer" type="GridContainer" parent="UI/ActionPanel/CenterContainer"]
visible = false
margin_left = 49.0
margin_top = 19.0
margin_right = 49.0
margin_bottom = 19.0
columns = 2

[node name="CharSelect" parent="UI/ActionPanel" instance=ExtResource( 7 )]
margin_left = 3.05859
margin_top = 1.63126
margin_right = 39.0586
margin_bottom = 37.6313
custom_styles/panel = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 14.0

[node name="TextBox" type="Label" parent="UI/CenterContainer"]
margin_left = 21.0
margin_top = 1.0
margin_right = 138.0
margin_bottom = 13.0
text = "Dapper Tick Tips his Top Hat"
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="UI/CenterContainer/TextBox"]
wait_time = 0.6
one_shot = true

[node name="PostBattlePanel" type="Panel" parent="UI"]
visible = false
margin_left = 5.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 115.0

[node name="MarginContainer" type="MarginContainer" parent="UI/PostBattlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="OuterVBox" type="VBoxContainer" parent="UI/PostBattlePanel/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 131.0
margin_bottom = 104.0

[node name="InnerVBox" type="VBoxContainer" parent="UI/PostBattlePanel/MarginContainer/OuterVBox"]
margin_right = 111.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
custom_constants/separation = 5

[node name="CenterContainer" type="CenterContainer" parent="UI/PostBattlePanel/MarginContainer/OuterVBox"]
margin_top = 74.0
margin_right = 111.0
margin_bottom = 94.0

[node name="NextButton" type="Button" parent="UI/PostBattlePanel/MarginContainer/OuterVBox/CenterContainer"]
margin_left = 40.0
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "Next"

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 80.8611, 31.3931 )
z_index = 12
z_as_relative = false

[node name="FADE" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( -31.7822, -7.08472 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="pressed" from="UI/ActionPanel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="UI/CenterContainer/TextBox/Timer" to="UI/CenterContainer/TextBox" method="_on_Timer_timeout"]
